@@ -1,12 +1,14 @@
 (defproject http.async.client "0.2.2-SNAPSHOT"
   :description      "Asynchronous HTTP Client for Clojure"
-  :namespaces       [http.async.client]
+  :url              "http://github.com/neotyk/http.async.client/"
+  :source-path      "src/clj"
+  :java-source-path "src/jvm"
+  :min-lein-version "1.4.1"
   :dependencies     [[org.clojure/clojure "1.2.0"]
 		     [org.clojure/clojure-contrib "1.2.0"]
-		     [com.ning/async-http-client "1.3.2"]]
+		     [com.ning/async-http-client "1.5.0-SNAPSHOT"]]
   :dev-dependencies [[swank-clojure "1.2.1"]
 		     [autodoc "0.7.1"]
-		     [org.clojars.neotyk/lein-javac "1.0.2"]
                      [org.danlarkin/clojure-json "1.1"]
                      [org.eclipse.jetty/jetty-server "7.1.4.v20100610"]
                      [org.eclipse.jetty/jetty-security "7.1.4.v20100610"]
@@ -14,7 +16,6 @@
                      [lein-run "1.0.0"]
                      [log4j "1.2.13"]]
   :repository {"snapshots" "http://oss.sonatype.org/content/repositories/snapshots/"}
-  :hooks [leiningen.hooks.javac]
   :autodoc {:name "http.async.client"
             :web-src-dir "http://github.com/neotyk/http.async.client/blob/"
             :web-home "http://neotyk.github.com/http.async.client/autodoc/"
